<resources>
    <string name="app_name">GreenSentry</string>
    <string name="text_content">Text Content</string>
    <string name="classification">Classification</string>
    <string name="Donasi">Donation</string>
    <string name="tentang_kami">About Us</string>
    <string name="aksi_kami">Our Action</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Result</string>
    <string name="greensentry">GreenSentry</string>
    <string name="about">About</string>
    <string name="text_headbar">About Us And Our Commitment</string>
    <string name="pengertian">An organization that operates in providing education and inviting all parties to support and preserve the natural environment and support creative waste management</string>
    <string name="visi">Vision</string>
    <string name="visi_text">Realizing a sustainable and harmonious natural environment through the active participation of the entire community in efforts to preserve and protect nature.</string>
    <string name="misi">Mission</string>
    <string name="misi_text">Providing comprehensive educational programs to increase public awareness of the importance of protecting and preserving the environment, Carrying out extensive campaigns to invite the public to participate in real actions that support environmental sustainability, Forming partnerships with various parties, including the government, private sector and local communities to work together to develop sustainable solutions to environmental problems.</string>
    <string name="our_team">Our Team</string>
    <string name="muhammad_raihan_al_fuady_ml">- Muhammad Raihan Al Fuady (Machine learning)</string>
    <string name="henny_gloria_datubara">- Henny Gloria Datubara (Machine learning)</string>
    <string name="muhammad_burhanudin">- Muhammad Burhanudin (Cloud Computing)</string>
    <string name="muhamad_rizky_ramadhana">- Muhamad Rizky Ramadhana (Cloud Computing)</string>
    <string name="divo_rio_gilang">- Divo Rio Gilang (Mobile Developer)</string>
    <string name="wildan_mutasim_billah">- Wildan Mutasim Billah (Mobile Developer)</string>
    <string name="language">Choose Language</string>
    <string name="no_rek">Mandiri : 1780006201855 a.n M.BURHANUDIN</string>
    <string name="confirm">Confirm</string>
    <string name="text_confirm">Please confirm and include proof of transfer below</string>
    <string name="failed_to_pick_image">Try again</string>
    <string name="crop_error">Crop error</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="select_an_image_first">Select an image first</string>
    <string name="unable_to_load_news">Failed to load news</string>
    <string name="wrong_email">Invalid email format</string>
    <string name="wrong_password_message">Incorrect password. Please try again.</string>
    <string name="email_already_used_message">Email already used</string>
    <string name="email_not_registered_message">Email not registered. Please sign up first.</string>
    <string name="invalid_email_format_message">Incorrect email. Please try again.</string>
    <string name="emailTake">Email has been registered, please create another email</string>
    <string name="nameEmpty">Name should not be empty</string>
    <string name="character_password">Password must be at least 8 characters</string>
    <string name="wrong_password">Wrong password</string>
    <string name="register_icon">Register icon</string>
    <string name="header_register">Register Your Account</string>
    <string name="description_register">Enter Account Information</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_password">Show Password</string>
    <string name="create_account">Create Account</string>
    <string name="login_icon">Login icon</string>
    <string name="description_login">Welcome to GreenSentry App</string>
    <string name="login">Login</string>
    <string name="btn_login">Login</string>
    <string name="dont_have_an_account">Don\'t Have an Account?</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="enter_last_name">Last Name</string>
    <string name="enter_first_name">First Name</string>
    <string name="loginDesc">Please login first</string>
    <string name="splashDes">Are You Ready for the Experience?</string>
    <string name="tvSplashBottom">Let\'s protect the environment together</string>
    <string name="logo_description">Logo description</string>
    <string name="Home">Home Page</string>
</resources>
