<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/forest_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Bagian Pengertian -->
        <TextView
            android:id="@+id/pengertian"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/headbar_text"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_headbar"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!-- Bagian Logo dan Nama Aplikasi -->
        <LinearLayout
            android:id="@+id/greensentry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="134dp"
                android:src="@drawable/logo_greensentry"
                android:contentDescription="@string/logo_description" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="16dp">

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greensentry"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pengertian"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:autoSizeMaxTextSize="14sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform" />
            </LinearLayout>

        </LinearLayout>

        <!-- Bagian Visi -->
        <LinearLayout
            android:id="@+id/visi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/judulVisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visi"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_visi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visi_text"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform" />
        </LinearLayout>

        <!-- Bagian Misi -->
        <LinearLayout
            android:id="@+id/misi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/judulmisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/misi"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_misi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/misi_text"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform" />
        </LinearLayout>

        <!-- Bagian Our Team -->
        <LinearLayout
            android:id="@+id/ourTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_team"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muhammad_raihan_al_fuady_ml"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/henny_gloria_datubara"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muhammad_burhanudin"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muhamad_rizky_ramadhana"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divo_rio_gilang"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wildan_mutasim_billah"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
