<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity"
    android:background="@drawable/bg_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/registIcon"
        android:layout_width="98dp"
        android:layout_height="95dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/register_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_person_pin_24" />

    <TextView
        android:id="@+id/registerAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/header_register"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="@+id/registIcon"
        app:layout_constraintStart_toStartOf="@+id/registIcon"
        app:layout_constraintTop_toBottomOf="@+id/registIcon" />

    <TextView
        android:id="@+id/informationAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="italic"
        android:text="@string/description_register"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/registerAccount"
        app:layout_constraintStart_toStartOf="@+id/registerAccount"
        app:layout_constraintTop_toBottomOf="@+id/registerAccount" />

    <com.wildan.greensentry.customview.NameInput
        android:id="@+id/ed_register_firstname"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_first_name"
        app:layout_constraintEnd_toEndOf="@+id/informationAccount"
        app:layout_constraintStart_toStartOf="@+id/informationAccount"
        app:layout_constraintTop_toBottomOf="@+id/informationAccount" />

    <com.wildan.greensentry.customview.NameInput
        android:id="@+id/ed_register_lastname"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_last_name"
        app:layout_constraintEnd_toEndOf="@+id/informationAccount"
        app:layout_constraintStart_toStartOf="@+id/informationAccount"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_firstname" />

    <com.wildan.greensentry.customview.EmailInput
        android:id="@+id/ed_register_email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_email"
        app:layout_constraintEnd_toEndOf="@+id/informationAccount"
        app:layout_constraintStart_toStartOf="@+id/informationAccount"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_lastname" />

    <com.wildan.greensentry.customview.PasswordInput
        android:id="@+id/ed_register_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/enter_password"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/informationAccount"
        app:layout_constraintStart_toStartOf="@+id/informationAccount"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

    <com.wildan.greensentry.customview.PasswordSameInput
        android:id="@+id/ed_register_passwordsame"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/informationAccount"
        app:layout_constraintStart_toStartOf="@+id/informationAccount"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <CheckBox
        android:id="@+id/open_password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:text="@string/show_password"
        app:layout_constraintStart_toStartOf="@+id/ed_register_passwordsame"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_passwordsame" />

    <Button
        android:id="@+id/btnRegisterAccount"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@+id/informationAccount"
        app:layout_constraintStart_toStartOf="@+id/informationAccount"
        app:layout_constraintTop_toBottomOf="@+id/open_password_register" />

    <ProgressBar
        android:id="@+id/progressbar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
