<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".view.LoginActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/background_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/loginIcon"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/login_icon"
        android:src="@drawable/baseline_person_pin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/description_login"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/loginIcon"
        app:layout_constraintStart_toStartOf="@+id/loginIcon"
        app:layout_constraintTop_toBottomOf="@+id/loginIcon" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/loginDesc"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginDesc" />

    <com.wildan.greensentry.customview.EmailInput
        android:id="@+id/ed_login_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_email"
        android:contentDescription="@string/enter_email"
        app:layout_constraintEnd_toEndOf="@+id/loginDesc"
        app:layout_constraintStart_toStartOf="@+id/loginDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <com.wildan.greensentry.customview.PasswordInput
        android:id="@+id/ed_login_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_password"
        android:contentDescription="@string/enter_password"
        app:layout_constraintEnd_toEndOf="@+id/loginDesc"
        app:layout_constraintStart_toStartOf="@+id/loginDesc"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

    <CheckBox
        android:id="@+id/open_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:text="@string/show_password"
        app:layout_constraintStart_toStartOf="@+id/ed_login_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_password"
        app:layout_constraintStart_toStartOf="@+id/ed_login_password"
        app:layout_constraintTop_toBottomOf="@+id/open_password_login" />

    <ProgressBar
        android:id="@+id/progressbar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ed_login_email" />

    <LinearLayout
        android:id="@+id/wrapper_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="4dp"
            android:onClick="onRegisterButtonClick" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
